# mcsoft-auth

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
src/: main.rs
