[package]
name = "mcsoft-auth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
dotenv = "0.15.0"
rand = "0.8.4"
reqwest = { version = "0.11.4", features = ["json", "multipart"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.1"
webbrowser = "0.5.5"
